Fix spacing on product page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -133,7 +133,7 @@ shop-pay-button {
   }
 
   .swimlane {
-    @apply grid w-full snap-x snap-mandatory scroll-px-2 grid-flow-col justify-start gap-2 overflow-x-scroll px-2 pb-2;
+    @apply grid w-full snap-x snap-mandatory scroll-px-4 grid-flow-col justify-start gap-4 overflow-x-scroll px-4 pb-4;
   }
 }
 
